--- a/work_sv.html
+++ b/work_sv.html
@@ -64,7 +64,7 @@
         <div class="img-col">
             <div class="img-hover-container">
                 <img src="img/INDEX_01.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">JAPANSTUDIO 2: OMSORGSNAV<br/>Masterstudio vid ETHZ med Chie Konno, Wataru Doi, Yukari Iwata, Erik Fichter</div>
+                <div class="img-hover-text">JAPANSTUDIO 2: CARE HUBS<br/>Masterstudio vid ETHZ med Chie Konno, Wataru Doi, Yukari Iwata, Erik Fichter</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_02.jpg" alt="LINYER Bild" class="hover-img" />
@@ -76,47 +76,111 @@
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_04.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">ETT HUS FÖR TVÅ BRÖDER<br/>Hjelmbacken, Sverige</div>
+                <div class="img-hover-text">FOKUSARBETE: BAMBU VÄXTHUS<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima och tio studenter</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_05.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">ETT HUS FÖR TVÅ BRÖDER<br/>Hjelmbacken, Sverige</div>
+                <div class="img-hover-text">FOKUSARBETE: BAMBU VÄXTHUS<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima och tio studenter</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_06.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FRONT BACK<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FOKUSARBETE: BAMBU VÄXTHUS<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima och tio studenter</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_07.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FRONT BACK<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FOKUSARBETE: BAMBU VÄXTHUS<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima och tio studenter</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_08.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FRONT BACK<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">HUS FÖR TVÅ BRÖDER<br/>Hjelmbacken, Sverige</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_09.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">HUS FÖR TVÅ BRÖDER<br/>Hjelmbacken, Sverige</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_10.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">HUS FÖR TVÅ BRÖDER<br/>Hjelmbacken, Sverige</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_11.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">ÅTERANVÄNDNING AV SNÄCKAN 8<br/>Stockholm, Sverige</div>
+                <div class="img-hover-text">HUS FÖR TVÅ BRÖDER<br/>Hjelmbacken, Sverige</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_12.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">DIE SÄULENHALLE: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FROM THE FRONT FROM BEHIND<br/>Denkraum #3, Consistency, ETHZ</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_13.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">DIE SÄULENHALLE: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FROM THE FRONT FROM BEHIND<br/>Denkraum #3, Consistency, ETHZ</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_14.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">DIE SÄULENHALLE: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FROM THE FRONT FROM BEHIND<br/>Denkraum #3, Consistency, ETHZ<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_15.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">FRÅN FRAMTILL FRÅN BAKOM<br/>Denkraum #3, Consistency, ETHZ<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_16.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_17.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_18.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">ÅTERANVÄNDNING AV SNÄCKAN 8<br/>KTH, Stockholm, Sverige</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_19.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">ÅTERANVÄNDNING AV SNÄCKAN 8<br/>KTH, Stockholm, Sverige</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_20.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">SÄULENHALLEN: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_21.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">SÄULENHALLEN: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_22.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">SÄULENHALLEN: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_23.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">SÄULENHALLEN: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_24.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">KERAMIKPAVILJONG<br/>Stockholm, Sverige</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_25.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>Cham, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_26.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">BYGGNADSSYSTEM<br/>Diplom KTH</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_27.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">BYGGNADSSYSTEM<br/>Diplom KTH</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_28.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">BYGGNADSSYSTEM<br/>Diplom KTH</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_29.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>Cham, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_30.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">MUSIKSKOLAN "DER HOLLÄNDER"<br/>Cham, Schweiz</div>
             </div>
         </div>
     </div>
