--- a/work_de.html
+++ b/work_de.html
@@ -64,7 +64,7 @@
         <div class="img-col">
             <div class="img-hover-container">
                 <img src="img/INDEX_01.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">JAPANSTUDIO 2: PFLEGEZENTREN<br/>Masterstudio an der ETHZ mit Chie Konno, Wataru Doi, Yukari Iwata, Erik Fichter</div>
+                <div class="img-hover-text">JAPANSTUDIO 2: CARE HUBS<br/>Masterstudio an der ETHZ mit Chie Konno, Wataru Doi, Yukari Iwata, Erik Fichter</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_02.jpg" alt="LINYER Bild" class="hover-img" />
@@ -76,47 +76,111 @@
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_04.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EIN HAUS FÜR ZWEI BRÜDER<br/>Hjelmbacken, Schweden</div>
+                <div class="img-hover-text">FOKUSARBEIT: BAMBOO GEWÄCHSHAUS<br/>Kurs an der ETHZ mit Prof. Momoyo Kaijima und zehn Studierenden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_05.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EIN HAUS FÜR ZWEI BRÜDER<br/>Hjelmbacken, Schweden</div>
+                <div class="img-hover-text">FOKUSARBEIT: BAMBOO GEWÄCHSHAUS<br/>Kurs an der ETHZ mit Prof. Momoyo Kaijima und zehn Studierenden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_06.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FRONT BACK<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FOKUSARBEIT: BAMBOO GEWÄCHSHAUS<br/>Kurs an der ETHZ mit Prof. Momoyo Kaijima und zehn Studierenden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_07.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FRONT BACK<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FOKUSARBEIT: BAMBOO GEWÄCHSHAUS<br/>Kurs an der ETHZ mit Prof. Momoyo Kaijima und zehn Studierenden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_08.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FRONT BACK<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">HAUS FÜR ZWEI BRÜDER<br/>Hjelmbacken, Schweden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_09.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">HAUS FÜR ZWEI BRÜDER<br/>Hjelmbacken, Schweden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_10.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">HAUS FÜR ZWEI BRÜDER<br/>Hjelmbacken, Schweden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_11.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">WIEDERVERWENDUNG SNÄCKAN 8<br/>Stockholm, Schweden</div>
+                <div class="img-hover-text">HAUS FÜR ZWEI BRÜDER<br/>Hjelmbacken, Schweden</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_12.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">DIE SÄULENHALLE: ENDLICH EIN ZENTRUM FÜR ZÜRICH WEST<br/>Illustrationen für das Themenheft der Juni 2025 Ausgabe des Hochparterres mit Nando von Arb<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FROM THE FRONT FROM BEHIND<br/>Denkraum #3, Consistency, ETHZ</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_13.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">DIE SÄULENHALLE: ENDLICH EIN ZENTRUM FÜR ZÜRICH WEST<br/>Illustrationen für das Themenheft der Juni 2025 Ausgabe des Hochparterres mit Nando von Arb<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FROM THE FRONT FROM BEHIND<br/>Denkraum #3, Consistency, ETHZ</div>
             </div>
                 <div class="img-hover-container">
                 <img src="img/INDEX_14.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">FROM THE FRONT FROM BEHIND<br/>Denkraum #3, Consistency, ETHZ<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_15.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">FROM THE FRONT FROM BEHIND<br/>Denkraum #3, Consistency, ETHZ<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_16.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Diploma with Prof. Momoyo Kaijima, ETHZ</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_17.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">EINE STADT OHNE SCHLACHTHOF?<br/>Diploma with Prof. Momoyo Kaijima, ETHZ</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_18.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">WIEDERVERWENDUNG SNÄCKAN 8<br/>KTH, Stockholm, Schweden</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_19.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">WIEDERVERWENDUNG SNÄCKAN 8<br/>KTH, Stockholm, Schweden</div>
+            </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_20.jpg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">DIE SÄULENHALLE: ENDLICH EIN ZENTRUM FÜR ZÜRICH WEST<br/>Illustrationen für das Themenheft der Juni 2025 Ausgabe des Hochparterres mit Nando von Arb<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_21.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">DIE SÄULENHALLE: ENDLICH EIN ZENTRUM FÜR ZÜRICH WEST<br/>Illustrationen für das Themenheft der Juni 2025 Ausgabe des Hochparterres mit Nando von Arb</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_22.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">DIE SÄULENHALLE: ENDLICH EIN ZENTRUM FÜR ZÜRICH WEST<br/>Illustrationen für das Themenheft der Juni 2025 Ausgabe des Hochparterres mit Nando von Arb<br/>Zürich, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_23.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">DIE SÄULENHALLE: ENDLICH EIN ZENTRUM FÜR ZÜRICH WEST<br/>Illustrationen für das Themenheft der Juni 2025 Ausgabe des Hochparterres mit Nando von Arb<br/>Zürich, Schweiz</div>
+            </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_24.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">KERAMIK PAVILLION<br/>Stockholm, Schweden</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_25.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>Cham, Schweiz</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_26.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">BUILDIND SYSTEMS<br/>Diploma KTH</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_27.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">BUILDIND SYSTEMS<br/>Diploma KTH</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_28.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">BUILDIND SYSTEMS<br/>Diploma KTH</div>
+            </div>
+            <div class="img-hover-container">
+                <img src="img/INDEX_29.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>Cham, Schweiz</div>
+            </div>
+                <div class="img-hover-container">
+                <img src="img/INDEX_30.jpg" alt="LINYER Bild" class="hover-img" />
+                <div class="img-hover-text">MUSIKSCHULE "DER HOLLÄNDER"<br/>Cham, Schweiz</div>
             </div>
         </div>
     </div>
