--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             color: red;
             text-decoration: none;
         }
+        @media (max-width: 600px) {
+            .overlay {
+                font-size: 2rem;
+            }
+        }
     </style>
 <body>
     <img id="bgImage" class="fullbleed-bg" src="img/INDEX_01.jpg" alt=" " />
@@ -70,6 +75,22 @@
             "img/INDEX_12.jpg",
             "img/INDEX_13.jpg",
             "img/INDEX_14.jpg",
+            "img/INDEX_15.jpg",
+            "img/INDEX_16.jpg",
+            "img/INDEX_17.jpg",
+            "img/INDEX_18.jpg",
+            "img/INDEX_19.jpg",
+            "img/INDEX_20.jpg",
+            "img/INDEX_21.jpg",
+            "img/INDEX_22.jpg",
+            "img/INDEX_23.jpg",
+            "img/INDEX_24.jpg",
+            "img/INDEX_25.jpg",
+            "img/INDEX_26.jpg",
+            "img/INDEX_27.jpg",
+            "img/INDEX_28.jpg",
+            "img/INDEX_29.jpg",
+            "img/INDEX_30.jpg",
         ];
         const bgImage = document.getElementById('bgImage');
         const randomIdx = Math.floor(Math.random() * images.length);
