--- a/work_sv.html
+++ b/work_sv.html
@@ -68,11 +68,11 @@
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_02.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FOKUSARBETE: KLIMATKÖK<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima<br/>Foto: Yuri Schmid</div>
+                <div class="img-hover-text">FOKUSARBETE: KLIMATKÖK<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima och åtta studenter<br/>Foto: Yuri Schmid</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_03.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FOKUSARBETE: KLIMATKÖK<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima<br/>Foto: Yuri Schmid</div>
+                <div class="img-hover-text">FOKUSARBETE: KLIMATKÖK<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima och åtta studenter<br/>Foto: Yuri Schmid</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_04.jpg" alt="LINYER Bild" class="hover-img" />
@@ -120,7 +120,7 @@
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_15.jpg" alt="LINYER Bild" class="hover-img" />
-                <div class="img-hover-text">FRÅN FRAMTILL FRÅN BAKOM<br/>Denkraum #3, Consistency, ETHZ<br/>Zürich, Schweiz</div>
+                <div class="img-hover-text">FROM THE FRONT FROM BEHIND<br/>Denkraum #3, Consistency, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
                 <img src="img/INDEX_16.jpg" alt="LINYER Bild" class="hover-img" />
